# cloud-drift-analyzer

./: .gitignore  README.md  drift.db  generate_file_structure.py  pyproject.toml
.github/instructions/: cloud-drift-analyzer.instructions.md  memory-bank.instructions.md
cloud_drift_analyzer/: Dockerfile  pyproject.toml
cloud_drift_analyzer/api/: __init__.py  dependencies.py  main.py
cloud_drift_analyzer/api/routes/: __init__.py  auth.py  auth.py.bak  chat.py  drift.py  health.py
cloud_drift_analyzer/api/schemas/: __init__.py  auth.py  chat.py
cloud_drift_analyzer/api/security/: __init__.py  auth.py
cloud_drift_analyzer/cli/: main.py
cloud_drift_analyzer/config/: logging_config.py  logging_dev.yaml  logging_prod.yaml  logging_test.yaml
cloud_drift_analyzer/core/: comparator.py  engine.py  logging.py  models.py  utils.py
cloud_drift_analyzer/db/: crud.py  database.py  models.py
cloud_drift_analyzer/examples/: __init__.py  agent_mcp_integration.py
cloud_drift_analyzer/mcp/: IMPLEMENTATION.md  README.md  __init__.py  agent_integration.py  api.py  base.py  server.py  tools.py
cloud_drift_analyzer/plugins/: slack_notifier.py
cloud_drift_analyzer/providers/: base.py
cloud_drift_analyzer/providers/aws/: auth_utils.py  client.py  jwks_client.py
cloud_drift_analyzer/reporters/: html_reporter.py  json_reporter.py
cloud_drift_analyzer/scheduler/: cron.py
cloud_drift_analyzer/scripts/: generate_fake_state.py
cloud_drift_analyzer/state_adapters/: base.py  pulumi.py  terraform.py
cloud_drift_analyzer/tests/: conftest.py
cloud_drift_analyzer/tests/api/: __init__.py  test_auth.py
cloud_drift_analyzer/tests/providers/aws/: test_auth.py  test_jwks_client.py
cloud_drift_analyzer/tests/state_adapters/: test_terraform.py
frontend/: index.html
